fix tabzilla's placement when the login form is visible
https://bugzilla.mozilla.org/show_bug.cgi?id=906757

--- a/skins/contrib/Mozilla/global.css
+++ b/skins/contrib/Mozilla/global.css
@@ -120,6 +120,7 @@ hr {
 
 #moz_tab {
     width: 100px;
+    vertical-align: top;
 }
 
 #moz_login {
